<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>org.eurekastreams</groupId>
    <artifactId>eurekastreams-parent</artifactId>
    <packaging>pom</packaging>
    <version>1.0-M2-SNAPSHOT</version>
    <name>Eureka Streams Parent</name>
    <url>http://maven.apache.org</url>
    <dependencies>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.4</version>
            <scope>test</scope>
        </dependency>
    </dependencies>
    <modules>
        <module>server</module>
        <module>web</module>
    </modules>
    <pluginRepositories>
        <pluginRepository>
            <id>codehaus snapshot repository</id>
            <url>http://snapshots.repository.codehaus.org/</url>
            <releases>
                <enabled>true</enabled>
            </releases>
        </pluginRepository>
    </pluginRepositories>
    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <source>1.6</source>
                    <target>1.6</target>
                    <memmax>2048m</memmax>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-resources-plugin</artifactId>
                <version>2.4.1</version>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-reactor-plugin</artifactId>
                <version>1.0</version>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <configuration>
                  <forkMode>once</forkMode>
                  <argLine>-Xms256m -Xmx1024m -XX:PermSize=128m -XX:MaxPermSize=512m</argLine>
                </configuration>
           </plugin>            
        </plugins>
    </build>

    <reporting>
        <plugins>
            <plugin>
                <artifactId>maven-project-info-reports-plugin</artifactId>
                <version>2.0.1</version>
            </plugin>
        </plugins>
    </reporting>

    <profiles>
        <profile>
            <!--
                This profile assists in reducing development build times
                when generating the clover reports.
            -->
            <id>dev.disablereporting</id>
            <activation>
                <property>
                    <name>!reports</name>
                </property>
            </activation>
            <reporting>
                <outputDirectory>${basedir}/target/site</outputDirectory>
                <plugins>
                    <plugin>
                        <artifactId>maven-project-info-reports-plugin</artifactId>
                        <version>2.0.1</version>
                        <reportSets>
                            <reportSet></reportSet>
                        </reportSets>
                    </plugin>
                </plugins>
            </reporting>
        </profile>
        <profile>
            <id>ounce.report</id>
            <activation>
                <property>
                    <name>reports</name>
                </property>
            </activation>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.codehaus.mojo</groupId>
                        <artifactId>exec-maven-plugin</artifactId>
                        <version>1.1</version>
                        <executions>
                            <execution>
                                <id>chmodder</id>
                                <phase>initialize</phase>
                                <goals>
                                    <goal>exec</goal>
                                </goals>
                                <configuration>
                                    <executable>chmod</executable>
                                    <arguments>
                                        <argument>-R</argument>
                                        <argument>g+w</argument>
                                        <argument>${basedir}</argument>
                                    </arguments>
                                </configuration>
                            </execution>
                            <execution>
                                <id>umasker</id>
                                <phase>initialize</phase>
                                <goals>
                                    <goal>exec</goal>
                                </goals>
                                <configuration>
                                    <executable>umask</executable>
                                    <arguments>
                                        <argument>0002</argument>
                                    </arguments>
                                </configuration>
                            </execution>
                        </executions>
                    </plugin>
                    <plugin>
                        <!--
                            Note that this plugin will invoke package Do
                            not configure this plugin using executions
                        -->
                        <groupId>org.codehaus.mojo</groupId>
                        <artifactId>ounce-maven-plugin</artifactId>
                        <configuration>
                            <installDir>/usr/local/share/Ounce_Labs</installDir>
                            <waitForScan>true</waitForScan>
                            <reportType>Findings</reportType>
                            <reportOutputType>pdf-comprehensive</reportOutputType>
                            <reportOutputPath>${basedir}/ounce.pdf</reportOutputPath>
                            <includeSrcBefore>10</includeSrcBefore>
                            <includeSrcAfter>10</includeSrcAfter>
                            <webappDirectory>${basedir}/target/ROOT/org.eurekastreams.web.Application/WEB-INF</webappDirectory>
                            <pathVariableMap>
                                <eurekaBaseSourcePath>"/opt/local/atlassian/bamboo/home/xml-data/build-dir/UNITYOS-JAVADOC"</eurekaBaseSourcePath>
                            </pathVariableMap>
                        </configuration>
                    </plugin>
                </plugins>
            </build>
        </profile>
        <profile>
            <id>javadoc.report</id>
            <activation>
                <property>
                    <name>reports</name>
                </property>
            </activation>
            <reporting>
                <plugins>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-javadoc-plugin</artifactId>
                        <version>2.6</version>
                        <reportSets>
                            <reportSet>
                                <reports>
                                    <report>aggregate</report>
                                    <report>test-aggregate</report>
                                </reports>
                            </reportSet>
                        </reportSets>
                    </plugin>
                </plugins>
            </reporting>
        </profile>
        <profile>
            <id>jdepend.report</id>
            <activation>
                <property>
                    <name>reports</name>
                </property>
            </activation>
            <reporting>
                <plugins>
                    <plugin>
                        <!-- Note that this plugin will invoke compile -->
                        <groupId>org.codehaus.mojo</groupId>
                        <artifactId>jdepend-maven-plugin</artifactId>
                    </plugin>
                </plugins>
            </reporting>
        </profile>  
        <profile>
            <id>taglist.report</id>
            <activation>
                <property>
                    <name>reports</name>
                </property>
            </activation>
            <reporting>
                <plugins>
                    <plugin>
                        <groupId>org.codehaus.mojo</groupId>
                        <artifactId>taglist-maven-plugin</artifactId>
                        <version>2.4</version>
                        <configuration>
                            <tagListOptions>
                                <tagClasses>
                                    <tagClass>
                                        <displayName>Todo Work</displayName>
                                        <tags>
                                            <tag>
                                                <matchString>@todo</matchString>
                                                <matchType>ignoreCase</matchType>
                                            </tag>
                                            <tag>
                                                <matchString>TODO</matchString>
                                                <matchType>exact</matchType>
                                            </tag> 
                                        </tags>   
                                    </tagClass>
                                    <tagClass>
                                        <displayName>Todo Performance Work</displayName>
                                        <tags>
                                            <tag>
                                                <matchString>todo-performance</matchString>
                                                <matchType>ignoreCase</matchType>
                                            </tag>
                                        </tags>   
                                    </tagClass>
                                </tagClasses>
                            </tagListOptions>
                        </configuration>
                    </plugin>
                </plugins>
            </reporting>
        </profile>
     </profiles>	
</project>
